# data-send-app

./: .env  README.md  next.config.ts  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/command/: mod.rs
src-tauri/src/io/: mod.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/actions/: action_of_ip.rs  action_of_upload.rs  actions_of_ip.rs  mod.rs
src-tauri/src/server/router/: mod.rs
src/app/: error.tsx  layout.tsx  page.tsx
src/app/upload/: page.tsx
src/components/: divider.tsx  ip-qr-code.tsx  open_folders.tsx  upload.tsx
src/context/: socket-addr-context.tsx
src/libs/commands/: app-command.ts
src/libs/utils/: get-local-ip.ts
src/types/: index.d.ts
