[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-axum = "0.7.1"
axum = {version = "0.8.8", features = ["multipart"]}
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
local-ip-address = "0.6.10"
dotenv = "0.15.0"
tower-http = {version = "0.6.8", features = ["cors"] }
